<resources>
    <string name="app_name">GROOVE</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="favourite_btn">Favourites</string>
    <string name="playlist_btn">Playlists</string>
    <string name="total_songs">Total Songs</string>
    <string name="just_groove">Just Groove</string>
    <string name="song_title">Song Title</string>
    <string name="loading">Loading</string>
    <string name="_00_00">00:00</string>
    <string name="repeat_btn">Repeat</string>
    <string name="equilisar_btn">Eq</string>
    <string name="timer_btn">Timer</string>
    <string name="share_btn">Share</string>
    <string name="back_btn">Back</string>
    <string name="favourites">Favourites</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="app_icon">App Icon</string>
    <string name="nav_text">Welcome,\nto Groove!</string>
    <string name="feedback_nav">Feedback</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="song_album">Song Album</string>

</resources>