<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivity"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/gradient_splash_screen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_icon"
            style="@style/Widget.AppCompat.Button.Borderless"
            app:tint="@android:color/black"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="24sp"
            android:text="@string/just_groove"
            android:textColor="@color/black"
            android:textAllCaps="false"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/hollow_fav_icon"
            style="@style/Widget.AppCompat.Button.Borderless"
            app:tint="@android:color/holo_red_dark"/>

    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="240sp"
        android:id="@+id/songimage_view"
        android:layout_height="240sp"
        android:layout_marginTop="64dp"
        app:shapeAppearanceOverlay="@style/curved"
        app:strokeColor="@color/cream"
        app:strokeWidth="4dp"
        android:layout_gravity="center_horizontal"/>


    <TextView
        android:id="@+id/songtitle_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/song_title"
        android:layout_marginTop="32dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:textAllCaps="false"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="48dp"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="40dp"
            android:id="@+id/previous_button"
            android:layout_height="40dp"
            app:icon="@drawable/previous_icon"
            app:iconTint="@color/white"
            android:backgroundTint="@color/dark_blue"
            app:iconSize="60dp"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:icon="@drawable/pause_icon"
            app:iconSize="50dp"
            android:id="@+id/pause_button"
            app:iconTint="@color/white"
            app:shapeAppearanceOverlay="@style/curved"
            android:backgroundTint="@android:color/holo_red_dark"
            android:layout_marginHorizontal="32sp"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:iconTint="@color/white"
            app:icon="@drawable/next_icon"
            android:id="@+id/next_button"
            android:backgroundTint="@color/dark_blue"
            app:iconSize="60dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="8sp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:id="@+id/current_time_textview"
            android:text="@string/_00_00"/>

        <androidx.appcompat.widget.AppCompatSeekBar
            android:layout_width="0dp"
            android:id="@+id/seekbar_seekbar"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:id="@+id/songduration_textview"
        android:text="@string/loading"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:layout_marginHorizontal="16dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/repeat_button"
            android:textColor="@color/black"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:drawableTint="@color/white"
            android:drawableTop="@drawable/repeat_icon"
            android:text="@string/repeat_btn"/>
        <Button
            android:layout_width="wrap_content"
            android:id="@+id/equilisar_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:drawableTint="@color/dark_blue"
            android:drawableTop="@drawable/equilisar_icon"
            android:text="@string/equilisar_btn"/>
        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:id="@+id/timer_button"
            android:layout_height="wrap_content"
            android:drawableTint="@color/dark_blue"
            android:drawableTop="@drawable/timer_icon"
            android:text="@string/timer_btn"/>

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/share_button"
            android:drawableTint="@color/white"
            android:textColor="@color/black"
            android:drawableTop="@drawable/share_icon"
            android:text="@string/share_btn"/>

    </LinearLayout>

</LinearLayout>