<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    android:background="@drawable/gradient_splash_screen"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4sp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/shuffle_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/shuffle_btn"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:contentDescription="@string/shuffle_btn"
                android:drawableTop="@drawable/shuffle_icon"/>

            <Button
                android:id="@+id/favourite_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/favourite_btn"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:contentDescription="@string/favourite_btn"
                android:drawableTop="@drawable/favorite_icon"/>

            <Button
                android:id="@+id/playlist_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/playlist_btn"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:contentDescription="@string/playlist_btn"
                android:drawableTop="@drawable/playlist_icon"/>

        </LinearLayout>

        <TextView
            android:id="@+id/totalsongs_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_songs"
            android:textColor="@color/black"
            android:layout_margin="8sp"
            android:textSize="16sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:layout_gravity="start"
        android:layout_marginTop="80dp"
        app:headerLayout="@layout/nav_header"
        android:id="@+id/nav_view"
        app:menu="@menu/nav_menu"/>

</androidx.drawerlayout.widget.DrawerLayout>